[package]
name = "erl_parse"
version = "0.0.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Erlang source code parser"
homepage = "https://github.com/sile/erl_parse"
repository = "https://github.com/sile/erl_parse"
readme = "README.md"
keywords = ["erlang", "parser"]
categories = ["parser-implementations"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/erl_parse"}

[dependencies]
erl_tokenize = "0.2"
trackable = "0.1"

[dev-dependencies]
clap = "2"
