[package]
name = "erl_parse"
version = "0.0.8"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Erlang source code parser"
homepage = "https://github.com/sile/erl_parse"
repository = "https://github.com/sile/erl_parse"
readme = "README.md"
keywords = ["erlang", "parser"]
categories = ["parser-implementations"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/erl_parse"}
codecov = {repository = "sile/erl_parse"}

[dependencies]
erl_pp = "0.1"
erl_tokenize = "0.3"
num = "0.2"
trackable = "0.2"

[dev-dependencies]
clap = "2"
